Add dark and light mode toggle

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Lotto Number Generator</h1>
+        <div class="header">
+            <h1>Lotto Number Generator</h1>
+            <button id="theme-toggle" class="theme-toggle" type="button" aria-label="Toggle dark mode">
+                <span aria-hidden="true">🌙</span>
+            </button>
+        </div>
         <button id="generate-btn">Generate Numbers</button>
         <div id="lotto-numbers-container"></div>
     </div>
