--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lotto Number Generator</title>
+    <title>Rainy Night Dinner Picker</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>Lotto Number Generator</h1>
+            <h1>Rainy Night Dinner Picker</h1>
             <button id="theme-toggle" class="theme-toggle" type="button" aria-label="Toggle dark mode">
                 <span aria-hidden="true">🌙</span>
             </button>
         </div>
-        <button id="generate-btn">Generate Numbers</button>
-        <div id="lotto-numbers-container"></div>
+        <p class="subtitle">비 오는 날, 따뜻하고 든든한 저녁 메뉴를 골라드려요.</p>
+        <button id="generate-btn">오늘 저녁 추천</button>
+        <div id="menu-result" class="menu-result" aria-live="polite"></div>
+        <div id="menu-options" class="menu-options"></div>
     </div>
     <script src="main.js"></script>
 </body>
