--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-1304112425581501">
     <meta name="description" content="사진 한 장으로 강아지/고양이 동물상을 예측하는 체험형 테스트입니다. 업로드한 사진은 브라우저에서만 처리되며, 사용 방법과 한계, 개인정보 안내를 투명하게 제공합니다.">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LN14LSSPPQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LN14LSSPPQ');
+    </script>
     <title>Animal Face Test</title>
     <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1304112425581501"
@@ -18,6 +27,13 @@
                 <span aria-hidden="true">🌙</span>
             </button>
         </div>
+        <nav class="site-nav" aria-label="사이트 탐색">
+            <a href="about.html">서비스 소개</a>
+            <a href="guide.html">사용 가이드</a>
+            <a href="faq.html">FAQ</a>
+            <a href="privacy.html">개인정보 처리</a>
+            <a href="terms.html">이용약관</a>
+        </nav>
         <p class="subtitle">강아지 vs 고양이, 사진으로 동물상 테스트를 해보세요.</p>
         <nav class="quick-nav" aria-label="빠른 이동">
             <a href="#how">사용 방법</a>
@@ -112,6 +128,13 @@
         </form>
         <footer class="site-footer">
             <p>본 사이트는 사용자 경험과 정보 전달을 중심으로 설계되었습니다. 광고는 콘텐츠를 보완하는 범위에서만 표시합니다.</p>
+            <p class="footer-links">
+                <a href="about.html">서비스 소개</a>
+                <a href="guide.html">사용 가이드</a>
+                <a href="faq.html">FAQ</a>
+                <a href="privacy.html">개인정보 처리</a>
+                <a href="terms.html">이용약관</a>
+            </p>
             <p>© 2026 Animal Face Test</p>
         </footer>
     </div>
