Improve SEO metadata and add sitemap

--- a/about.html
+++ b/about.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-1304112425581501">
     <meta name="description" content="Animal Face Test의 목적, 제공 가치, 운영 원칙을 소개합니다.">
+    <link rel="canonical" href="https://hsuj86.github.io/product-builder-lecture/about.html">
+    <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="ko_KR">
+    <meta property="og:site_name" content="Animal Face Test">
+    <meta property="og:title" content="서비스 소개 | Animal Face Test">
+    <meta property="og:description" content="Animal Face Test의 목적, 제공 가치, 운영 원칙을 소개합니다.">
+    <meta property="og:url" content="https://hsuj86.github.io/product-builder-lecture/about.html">
+    <meta property="og:image" content="https://hsuj86.github.io/product-builder-lecture/apple-touch-icon.png">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="서비스 소개 | Animal Face Test">
+    <meta name="twitter:description" content="Animal Face Test의 목적, 제공 가치, 운영 원칙을 소개합니다.">
+    <meta name="twitter:image" content="https://hsuj86.github.io/product-builder-lecture/apple-touch-icon.png">
+    <meta name="theme-color" content="#f9a825">
 
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="icon" href="favicon.png" type="image/png" sizes="32x32">
