--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-1304112425581501">
     <meta name="description" content="사진 한 장으로 강아지/고양이 동물상을 예측하는 체험형 테스트입니다. 업로드한 사진은 브라우저에서만 처리되며, 사용 방법과 한계, 개인정보 안내를 투명하게 제공합니다.">
+    <link rel="canonical" href="https://hsuj86.github.io/product-builder-lecture/">
+    <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="ko_KR">
+    <meta property="og:site_name" content="Animal Face Test">
+    <meta property="og:title" content="Animal Face Test">
+    <meta property="og:description" content="사진 한 장으로 강아지/고양이 동물상을 예측하는 체험형 테스트입니다. 업로드한 사진은 브라우저에서만 처리되며, 사용 방법과 한계, 개인정보 안내를 투명하게 제공합니다.">
+    <meta property="og:url" content="https://hsuj86.github.io/product-builder-lecture/">
+    <meta property="og:image" content="https://hsuj86.github.io/product-builder-lecture/apple-touch-icon.png">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Animal Face Test">
+    <meta name="twitter:description" content="사진 한 장으로 강아지/고양이 동물상을 예측하는 체험형 테스트입니다. 업로드한 사진은 브라우저에서만 처리되며, 사용 방법과 한계, 개인정보 안내를 투명하게 제공합니다.">
+    <meta name="twitter:image" content="https://hsuj86.github.io/product-builder-lecture/apple-touch-icon.png">
+    <meta name="theme-color" content="#f9a825">
 
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="icon" href="favicon.png" type="image/png" sizes="32x32">
@@ -26,6 +40,16 @@
         })(window, document, "clarity", "script", "vb42dzsl79");
     </script>
     <title>Animal Face Test</title>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Animal Face Test",
+      "url": "https://hsuj86.github.io/product-builder-lecture/",
+      "description": "사진 한 장으로 강아지/고양이 동물상을 예측하는 체험형 테스트입니다. 업로드한 사진은 브라우저에서만 처리되며, 사용 방법과 한계, 개인정보 안내를 투명하게 제공합니다.",
+      "inLanguage": "ko"
+    }
+    </script>
     <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1304112425581501"
      crossorigin="anonymous"></script>
