--- a/guide.html
+++ b/guide.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-1304112425581501">
     <meta name="description" content="사진 업로드부터 결과 확인까지, Animal Face Test 사용 방법을 안내합니다.">
+    <link rel="canonical" href="https://hsuj86.github.io/product-builder-lecture/guide.html">
+    <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="ko_KR">
+    <meta property="og:site_name" content="Animal Face Test">
+    <meta property="og:title" content="사용 가이드 | Animal Face Test">
+    <meta property="og:description" content="사진 업로드부터 결과 확인까지, Animal Face Test 사용 방법을 안내합니다.">
+    <meta property="og:url" content="https://hsuj86.github.io/product-builder-lecture/guide.html">
+    <meta property="og:image" content="https://hsuj86.github.io/product-builder-lecture/apple-touch-icon.png">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="사용 가이드 | Animal Face Test">
+    <meta name="twitter:description" content="사진 업로드부터 결과 확인까지, Animal Face Test 사용 방법을 안내합니다.">
+    <meta name="twitter:image" content="https://hsuj86.github.io/product-builder-lecture/apple-touch-icon.png">
+    <meta name="theme-color" content="#f9a825">
 
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="icon" href="favicon.png" type="image/png" sizes="32x32">
