Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-1304112425581501">
+    <meta name="naver-site-verification" content="83b60aee09062b0e30c014e5aa801fe24625e84a">
+    <meta name="google-site-verification" content="M2uStdk-N0Bi1evFZPILljs5euPD-JGEItucIETkoyU">
     <meta name="description" content="사진 한 장으로 강아지/고양이 동물상을 예측하는 체험형 테스트입니다. 업로드한 사진은 브라우저에서만 처리되며, 사용 방법과 한계, 개인정보 안내를 투명하게 제공합니다.">
     <link rel="canonical" href="https://hsuj86.github.io/product-builder-lecture/">
     <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
