Add cross-page FAQs and structured metadata

--- a/guide.html
+++ b/guide.html
@@ -67,6 +67,38 @@
       ]
     }
     </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "사진은 어디에서 처리되나요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "사진은 브라우저에서만 처리되며 서버로 전송되지 않습니다."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "정확도를 높이려면 어떻게 해야 하나요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "밝고 정면에 가까운 사진을 사용하면 결과가 더 안정적입니다."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "결과는 어떻게 해석해야 하나요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "결과는 오락적 참고용이며 개인 판단을 대체하지 않습니다."
+          }
+        }
+      ]
+    }
+    </script>
     <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1304112425581501"
      crossorigin="anonymous"></script>
@@ -122,6 +154,31 @@
         <section class="content-section">
             <h2 class="section-title">결과 해석</h2>
             <p class="section-text">결과는 오락적 참고용이며, 개인을 평가하거나 분류하는 용도로 사용하지 않습니다. 다양한 사진으로 여러 번 테스트해 보세요.</p>
+        </section>
+        <section class="content-section">
+            <h2 class="section-title">자주 묻는 질문</h2>
+            <div class="faq">
+                <details>
+                    <summary>사진은 어디에서 처리되나요?</summary>
+                    <p>사진은 브라우저에서만 처리되며 서버로 전송되지 않습니다.</p>
+                </details>
+                <details>
+                    <summary>정확도를 높이려면 어떻게 해야 하나요?</summary>
+                    <p>밝고 정면에 가까운 사진을 사용하면 결과가 더 안정적입니다.</p>
+                </details>
+                <details>
+                    <summary>결과는 어떻게 해석해야 하나요?</summary>
+                    <p>결과는 오락적 참고용이며 개인 판단을 대체하지 않습니다.</p>
+                </details>
+            </div>
+        </section>
+        <section class="content-section">
+            <h2 class="section-title">관련 문서</h2>
+            <p class="section-text">
+                <a href="index.html">테스트 하러가기</a> ·
+                <a href="faq.html">FAQ</a> ·
+                <a href="privacy.html">개인정보 처리</a>
+            </p>
         </section>
         <footer class="site-footer">
             <p class="footer-links">
