--- a/index.html
+++ b/index.html
@@ -218,6 +218,15 @@
             <p class="section-text">광고는 콘텐츠 품질을 유지하기 위해 제한적으로 표시됩니다.</p>
             <div class="ad-slot" aria-hidden="true">광고 유닛 설정 필요</div>
         </section>
+        <section class="content-section">
+            <h2 class="section-title">관련 문서</h2>
+            <p class="section-text">
+                <a href="guide.html">사용 가이드</a> ·
+                <a href="faq.html">FAQ</a> ·
+                <a href="privacy.html">개인정보 처리</a> ·
+                <a href="terms.html">이용약관</a>
+            </p>
+        </section>
         <form class="partner-form" action="https://formspree.io/f/xkozoqkr" method="POST">
             <h2 id="contact">제휴 문의</h2>
             <label>
