--- a/privacy.html
+++ b/privacy.html
@@ -72,6 +72,15 @@
       ]
     }
     </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "PrivacyPolicy",
+      "name": "개인정보 처리 | Animal Face Test",
+      "url": "https://hsuj86.github.io/product-builder-lecture/privacy.html",
+      "inLanguage": "ko"
+    }
+    </script>
     <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1304112425581501"
      crossorigin="anonymous"></script>
@@ -130,6 +139,14 @@
                     <p>문의 내용은 대응 완료 후 일정 기간 보관될 수 있으며 필요 시 즉시 파기됩니다.</p>
                 </details>
             </div>
+        </section>
+        <section class="content-section">
+            <h2 class="section-title">관련 문서</h2>
+            <p class="section-text">
+                <a href="index.html">테스트 하러가기</a> ·
+                <a href="faq.html">FAQ</a> ·
+                <a href="terms.html">이용약관</a>
+            </p>
         </section>
         <footer class="site-footer">
             <p class="footer-links">
