--- a/about.html
+++ b/about.html
@@ -40,6 +40,20 @@
         })(window, document, "clarity", "script", "vb42dzsl79");
     </script>
     <title>서비스 소개 | Animal Face Test</title>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "AboutPage",
+      "name": "서비스 소개 | Animal Face Test",
+      "url": "https://hsuj86.github.io/product-builder-lecture/about.html",
+      "inLanguage": "ko",
+      "about": {
+        "@type": "WebSite",
+        "name": "Animal Face Test",
+        "url": "https://hsuj86.github.io/product-builder-lecture/"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1304112425581501"
      crossorigin="anonymous"></script>
@@ -94,6 +108,32 @@
                     <p>제휴 문의 폼으로 비즈니스 문의를 받을 수 있도록 준비했습니다.</p>
                 </div>
             </div>
+        </section>
+        <section class="content-section">
+            <h2 class="section-title">자주 묻는 질문</h2>
+            <div class="faq">
+                <details>
+                    <summary>이 서비스는 누구를 위한 건가요?</summary>
+                    <p>사진으로 간단한 테스트를 즐기고 싶은 사용자에게 적합합니다.</p>
+                </details>
+                <details>
+                    <summary>결과가 실제 판단을 대신하나요?</summary>
+                    <p>아니요. 결과는 오락적 참고용이며 판단을 대체하지 않습니다.</p>
+                </details>
+                <details>
+                    <summary>자세한 사용 방법은 어디서 볼 수 있나요?</summary>
+                    <p>사용 가이드 페이지에서 단계별 설명을 확인할 수 있습니다.</p>
+                </details>
+            </div>
+        </section>
+        <section class="content-section">
+            <h2 class="section-title">관련 문서</h2>
+            <p class="section-text">
+                <a href="guide.html">사용 가이드</a> ·
+                <a href="faq.html">FAQ</a> ·
+                <a href="privacy.html">개인정보 처리</a> ·
+                <a href="terms.html">이용약관</a>
+            </p>
         </section>
         <footer class="site-footer">
             <p class="footer-links">
