--- a/faq.html
+++ b/faq.html
@@ -173,6 +173,15 @@
                 </details>
             </div>
         </section>
+        <section class="content-section">
+            <h2 class="section-title">관련 문서</h2>
+            <p class="section-text">
+                <a href="index.html">테스트 하러가기</a> ·
+                <a href="guide.html">사용 가이드</a> ·
+                <a href="privacy.html">개인정보 처리</a> ·
+                <a href="terms.html">이용약관</a>
+            </p>
+        </section>
         <footer class="site-footer">
             <p class="footer-links">
                 <a href="index.html">테스트 하러가기</a>
