--- a/terms.html
+++ b/terms.html
@@ -72,6 +72,15 @@
       ]
     }
     </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "이용약관 | Animal Face Test",
+      "url": "https://hsuj86.github.io/product-builder-lecture/terms.html",
+      "inLanguage": "ko"
+    }
+    </script>
     <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1304112425581501"
      crossorigin="anonymous"></script>
@@ -138,6 +147,14 @@
                     <p>타인의 권리를 침해하거나 불법 목적, 차별적 판단, 서비스 운영 방해 행위를 하지 않아야 합니다.</p>
                 </details>
             </div>
+        </section>
+        <section class="content-section">
+            <h2 class="section-title">관련 문서</h2>
+            <p class="section-text">
+                <a href="index.html">테스트 하러가기</a> ·
+                <a href="privacy.html">개인정보 처리</a> ·
+                <a href="faq.html">FAQ</a>
+            </p>
         </section>
         <footer class="site-footer">
             <p class="footer-links">
